#242 - warnings überarbeitet und unnötiges dto gelöscht